--- a/src/App.css
+++ b/src/App.css
@@ -20,20 +20,16 @@ body {
    min-height: 100vh;
 }
 
-header {
+.todo-header {
    font-size: 2rem;
 }
 
-header, 
-form {
+.todo-header, 
+.todo-form {
    min-height: 20vh;
    display: flex;
    justify-content: center;
    align-items: center;
-}
-
-h1 {
-   font-size: 5rem;
 }
 
 .wanna {
@@ -51,7 +47,7 @@ h1 {
    margin-right: 1rem;
 }
 
-form input {
+.todo-form input {
    font-family: 'coffee&tea', sans-serif;
    letter-spacing: 1px;
    padding: 0.5rem;
@@ -61,7 +57,7 @@ form input {
    width: 25%
 }
 
-form button {
+.todo-button {
    padding: 0.4rem;
    font-size: 2rem;
    border: none;
@@ -138,7 +134,7 @@ form button {
 
 /*CUSTOM SELECTOR */
 
-select {
+.todo-select {
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
@@ -147,18 +143,15 @@ select {
    box-shadow: none;
    border: 0 !important;
    background-image: none;
+   color: #000000;
+   font-family: 'Poppins', sans-serif;
+   cursor: pointer;
 }
 
 .select {
    margin: 1rem;
    position: relative;
    overflow: hidden;
-}
-
-select {
-   color: #000000;
-   font-family: 'Poppins', sans-serif;
-   cursor: pointer;
 }
 
 .select::after {
