--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Fonts */
 @font-face {
       font-family: 'coffee&tea';
       font-weight: normal;
@@ -22,13 +21,18 @@ body {
 
 .todo-header {
    font-size: 2rem;
+   margin: 5.5rem;
+}
+
+.todo-form {
+   margin: 2rem;
 }
 
 .todo-header, 
 .todo-form {
-   min-height: 20vh;
    display: flex;
-   justify-content: center;
+   flex-direction: column;
+   justify-content: space-between;
    align-items: center;
 }
 
@@ -39,7 +43,7 @@ body {
    transform: rotateZ(-10deg);
    position: absolute;
    top: 4%;
-   right: 52%;
+   right: 35%;
 }
 
 .to-do {
@@ -50,15 +54,17 @@ body {
 .todo-form input {
    font-family: 'coffee&tea', sans-serif;
    letter-spacing: 1px;
+   margin: 1rem;
    padding: 0.5rem;
    font-size: 2rem;
    border: none;
    background: white;
-   width: 25%
+   width: 90%
 }
 
 .todo-button {
    padding: 0.4rem;
+   margin: 1rem;
    font-size: 2rem;
    border: none;
    background: white;
@@ -89,12 +95,6 @@ body {
    justify-content: space-between;
    align-items: center;
    transition: all 1s ease;
-}
-
-.todo-select {
-   width: 11rem;
-   padding: 0.9rem;
-   font-size: 1rem
 }
 
 .todo li {
@@ -146,6 +146,9 @@ body {
    color: #000000;
    font-family: 'Poppins', sans-serif;
    cursor: pointer;
+   width: 11rem;
+   padding: 0.5rem;
+   font-size: 1rem
 }
 
 .select {
@@ -159,8 +162,58 @@ body {
    position: absolute;
    top: 0;
    right: 0;
-   padding: 1.1rem;
+   padding: 0.5rem;
    color: #000000;
    cursor: pointer;
    pointer-events: none;
 }
+
+/* * IPAD */
+@media only screen and (min-width: 550px) {
+   .todo-header {
+      font-size: 2.5rem;
+      margin: 6rem;
+      padding: 5rem;
+   }
+
+   .todo-form {
+      margin: 2rem;
+      padding: 2rem;
+   }
+
+   .todo-header, 
+   .todo-form {
+      flex-direction: row;
+      justify-content: center;
+   }
+
+   .wanna {
+      top: 8%;
+      right: 50%;
+   }
+
+   .todo-form input {
+      font-family: 'coffee&tea', sans-serif;
+      letter-spacing: 1px;
+      margin: 0px;
+      padding: 0.5rem;
+      font-size: 2rem;
+      border: none;
+      background: white;
+      width: 25%
+   }
+
+   .todo-button {
+      margin: 0rem;
+   }
+
+   .todo-select {
+      padding: 0.9rem;
+   }
+
+   .select::after {
+      padding: 1.1rem;
+   }
+}
+
+
